# logos

./: .gitignore  AGENTS.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  PLAN.md  PR11.patch  PROJECT_STATUS.md  README.md  SESSION_HANDOFF_A2_2026-01-20.md  SESSION_HANDOFF_A3_2026-01-20.md  SESSION_HANDOFF_A5_2026-01-20.md  blueprint.md  install-completion.sh  install-requirements.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  uninstall.sh
.github/workflows/: test.yml
completions/bash/: logos
completions/fish/: logos.fish
completions/zsh/: _logos
docs/: AGENT_BOUNDARIES.md  AGENT_RECOMMENDATIONS.md  CLI_USAGE.md  DAEDELUS_CONSTITUTION.md  DEUS_FREEBSD_REFERENCE.md  DEUS_LINUX_REFERENCE.md  DEUS_MANDATE.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_INDEX.md  FACTIONS.md  KNOWN_ISSUES.md  MIGRATION_GUIDE.md  OS_ADAPTATIONS.md  RELEASE_NOTES.md  SHELL_COMPLETION.md  WORKFLOWS.md
docs/architecture/: DOCUMENTATION_ARCHITECTURE.md
docs/examples/: DOC_UPDATER_WORKFLOW.md  ORCHESTRATOR_WORKFLOW.md
logos/: __init__.py  __main__.py
logos/cli/: __init__.py  agent_select.py  args.py  first_run.py  layouts.py  main.py  mode_select.py
logos/core/: __init__.py  agent.py  aliases.py  archival.py  bloat_prevention.py  clipboard.py  config.py  constants.py  devdocs.py  doc_audit.py  factions.py  identity.py  logging.py  persistence.py  prompts.py  refusal.py  temporal_logs.py  terminal.py  types.py  ui.py  validation.py  version.py  workflow_tracking.py
logos/daedelus/: __init__.py  agents.py  constitution.py
logos/deus/: __init__.py  agents.py  mandate.py
scripts/: audit_documentation.py
templates/.devdocs/: DEV_STATE.md  README.md
templates/docs/: README.md
tests/: __init__.py  conftest.py  helpers.py
tests/test_cli/: __init__.py  test_agent_select.py  test_args.py  test_first_run.py  test_layouts.py  test_main.py  test_mode_select.py  test_search.py
tests/test_core/: __init__.py  test_agent.py  test_aliases.py  test_archival.py  test_bloat_prevention.py  test_clipboard.py  test_config.py  test_constants.py  test_constitution_compliance.py  test_devdocs.py  test_factions.py  test_identity.py  test_logging.py  test_os_adaptation.py  test_performance.py  test_persistence.py  test_prompts.py  test_recent_agents.py  test_refusal.py  test_temporal_logs.py  test_terminal.py  test_ui.py  test_validation.py  test_version.py  test_workflow_tracking.py
tests/test_daedelus/: __init__.py  test_boundaries_group_a_b.py  test_boundaries_group_c_e.py
tests/test_deus/: __init__.py  test_boundaries_group_a_b.py  test_boundaries_group_c_e.py  test_freebsd_specifics.py  (+1 more)
(+30 files in other folders)
